header overflow bug

--- a/berry/skin-berry.less
+++ b/berry/skin-berry.less
@@ -703,7 +703,7 @@ The Berry theme is designed to be a bright and cheerful generic theme.
 // end type.less
 // ###############################
 
-header {position: relative;
+header {position: relative; overflow: hiden;
 	.gradient (@stops: left, #141031, #752663, #6c4fad, #141031; @fallback: #141031;);
 	&:after  {.circle;border: 30px solid rgba(255,255,255,0.1); top: 35px; left: 60%;}
 	&:before {.circle; border: 70px solid rgba(255,255,255,0.1); top: 170px; left: 26%;}
